--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <form method="post" onsubmit="return convertCurrency()">
                     <div class="form-group">
                         <label for="convert-amount">Amount</label>
-                        <input type="number" min="1" step=any id="convert-amount" value="1" class="form-control" placeholder="Enter Amount">
+                        <input type="number" min="" step=any id="convert-amount" value="1" class="form-control" placeholder="Enter Amount">
                     </div>
                     <br />
                     <div class="form-group">
