--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="col-md-12">
             <div class="container">
-                <h1 class="lead text-center hero">Select Currency</h1>
+                <h1 class="lead text-center hero">Currency Converter</h1>
                 <form method="post" onsubmit="return convertCurrency()">
                     <div class="form-group">
                         <label for="convert-amount">Amount</label>
@@ -46,7 +46,7 @@
                     <br />
                     <div class="form-group text-center">
                         <label for="convert-btn"></label>
-                        <button class="btn btn-default" id="convert-btn">Convert</button>
+                        <button class="btn btn-danger" id="convert-btn">Convert</button>
                     </div>
                     <br />
                 </form>
