--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
@@ -52,6 +53,7 @@
         </div>
     </div>
 </div>
+
 
     <!-- notification section -->
     <!-- alert notification -->
