--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Currency Convert.">
     <meta name="author" content="Harry">
     <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#2196f3">
     <title>Currency Convert</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
